## Process this file with automake to produce Makefile.in


# Microsoft Visual C++
VS_FILES = \
BitmapViewer/BitmapViewer.vcxproj.filters \
BitmapViewer/BitmapViewer.vcxproj \
Button/Button.vcxproj.filters \
Button/Button.vcxproj \
Calculator/Calculator.vcxproj \
Calculator/Calculator.vcxproj.filters \
Calendar/Calendar.vcxproj.filters \
Calendar/Calendar.vcxproj \
DataTarget/DataTarget.vcxproj.filters \
DataTarget/DataTarget.vcxproj \
DirList/DirList.vcxproj \
DirList/DirList.vcxproj.filters \
Expression/Expression.vcxproj.filters \
Expression/Expression.vcxproj \
Format/Format.vcxproj.filters \
Format/Format.vcxproj \
FourSplit/FourSplit.vcxproj \
FourSplit/FourSplit.vcxproj.filters \
GLTest/GLTest.vcxproj.filters \
GLTest/GLTest.vcxproj \
GLViewer/GLViewer.vcxproj.filters \
GLViewer/GLViewer.vcxproj \
GaugeTest/GaugeTest.vcxproj.filters \
GaugeTest/GaugeTest.vcxproj \
GroupBox/GroupBox.vcxproj.filters \
GroupBox/GroupBox.vcxproj \
Header/Header.vcxproj.filters \
Header/Header.vcxproj \
Hello/Hello.vcxproj \
Hello/Hello.vcxproj.filters \
Hello2/Hello2.vcxproj.filters \
Hello2/Hello2.vcxproj \
Image/Image.vcxproj \
Image/Image.vcxproj.filters \
ImageViewer/ImageViewer.vcxproj.filters \
ImageViewer/ImageViewer.vcxproj \
Layout/Layout.vcxproj.filters \
Layout/Layout.vcxproj \
MDITest/MDITest.vcxproj.filters \
MDITest/MDITest.vcxproj \
MappedFile/mappedfile.vcxproj.filters \
MappedFile/mappedfile.vcxproj \
PathFinder/PathFinder.vcxproj \
PathFinder/PathFinder.vcxproj.filters \
Process/Process.vcxproj.filters \
Process/Process.vcxproj \
Ratio/Ratio.vcxproj \
Ratio/Ratio.vcxproj.filters \
Rex/Rex.vcxproj \
Rex/Rex.vcxproj.filters \
Scribble/Scribble.vcxproj \
Scribble/Scribble.vcxproj.filters \
Shutter/Shutter.vcxproj \
Shutter/Shutter.vcxproj.filters \
ShutterBug/ShutterBug.vcxproj \
ShutterBug/ShutterBug.vcxproj.filters \
Splitter/Splitter.vcxproj.filters \
Splitter/Splitter.vcxproj \
Switcher/Switcher.vcxproj \
Switcher/Switcher.vcxproj.filters \
TabBook/TabBook.vcxproj \
TabBook/TabBook.vcxproj.filters \
Table/Table.vcxproj \
Table/Table.vcxproj.filters \
Thread/Thread.vcxproj \
Thread/Thread.vcxproj.filters \
Timefmt/Timefmt.vcxproj \
Timefmt/Timefmt.vcxproj.filters \
Unicode/Unicode.vcxproj \
Unicode/Unicode.vcxproj.filters \
Variant/Variant.vcxproj.filters \
Variant/Variant.vcxproj \
Wizard/Wizard.vcxproj.filters \
Wizard/Wizard.vcxproj \
XML/XML.vcxproj \
XML/XML.vcxproj.filters \
adie/adie.vcxproj.filters \
adie/adie.vcxproj \
dctest/dctest.vcxproj \
dctest/dctest.vcxproj.filters \
foxdll/foxdll.vcxproj \
foxdll/foxdll.vcxproj.filters \
foxlib/foxlib.vcxproj.filters \
foxlib/foxlib.vcxproj \
reswrap/reswrap.vcxproj.filters \
reswrap/reswrap.vcxproj \
vs.sln \
vs.vcxproj \
vs.vcxproj.filters

EXTRA_DIST = $(VS_FILES)






















